ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.1.2
    • Affects Version/s: None
    • Component/s: Replication
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      	
       m31001| Wed May 30 09:32:40 [rsSync] build index d.c { _id: 1 }
       m31001| Wed May 30 09:32:41 [rsSync] 	 fastBuildIndex dupsToDrop:0
       m31001| Wed May 30 09:32:41 [rsSync] build index d.c { x: 1.0 }
       m31001| Wed May 30 09:32:41 [rsSync] build index done.  scanned 50477 total records. 0.976 secs
       m31001| Wed May 30 09:32:42 [FileAllocator] allocating new datafile /data/db/replset7tests-1/d.1, filling with zeroes...
       m31001| Wed May 30 09:32:43 [FileAllocator] done allocating datafile /data/db/replset7tests-1/d.1, size: 32MB,  took 0.098 secs
       m31001| Wed May 30 09:32:43 [rsSync] ERROR: error: exception cloning object in d.system.indexes E11000 duplicate key error index: d.c.$x_1  dup key: { : 44293.0 } obj:{ key: { x: 1.0 }, unique: true, ns: "d.c", name: "x_1" }
       m31001| Wed May 30 09:32:43 [rsSync] datafileheader::init initializing /data/db/replset7tests-1/d.1 n:1
       m31001| replSet initial sync exception: 11000 E11000 duplicate key error index: d.c.$x_1  dup key: { : 44293.0 } 0 attempts remaining
      

      http://buildlogs.mongodb.org/build/4fc61fe4d2a60f4fb300003e/test/4fc61fe5d2a60f4fc2000035/

            Assignee:
            Eliot Horowitz (Inactive)
            Reporter:
            Ian Whalen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: