SERVER-5963 change order of initial sync so that we do data, then sync, then indexes, then sync again to make sure indexes work well